--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 version: 0.2
 env:
     secrets-manager:
-      TOKEN: firstSecret:tokenForSonar
+      TOKEN: keyend2end:keyend2end
 phases:
   install:
     runtime-versions:
@@ -10,13 +10,13 @@ phases:
     commands:
 
 #Static Application Security Scan (SAST scan) using SonarCloud
-     - mvn verify sonar:sonar -Dsonar.projectKey=javaprojectaws -Dsonar.organization=javaprojectaws -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$TOKEN 
+     - mvn verify sonar:sonar -Dsonar.projectKey=devseceps-end-2-end_devseceps-end-2-end -Dsonar.organization=devseceps_end_2_end -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$TOKEN 
 
 #Quality Gates for Static Application Security Scan(SAST) using SonarCloud
 
      - sleep 5
      - |- 
-        quality_status=$(curl -s -u $TOKEN: https://sonarcloud.io/api/qualitygates/project_status?projectKey=javaprojectaws | jq -r '.projectStatus.status')
+        quality_status=$(curl -s -u $TOKEN: https://sonarcloud.io/api/qualitygates/project_status?projectKey=devseceps-end-2-end_devseceps-end-2-end | jq -r '.projectStatus.status')
         echo "SonarCloud analysistatus is $quality_status"; 
 #        if [ $quality_status = "ERROR" ] ; then exit 1;fi
 
