--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
 
      - sleep 5
      - |- 
-        quality_status=$(curl -s -u $TOKEN: https://sonarcloud.io/api/qualitygates/project_status?projectKey=devseceps-end-2-end_devseceps-end-2-end | jq -r '.projectStatus.status')
+        quality_status=$(curl -s -u $TOKEN: https://sonarcloud.io/api/qualitygates/project_status?projectKey=end2end | jq -r '.projectStatus.status')
         echo "SonarCloud analysistatus is $quality_status"; 
 #        if [ $quality_status = "ERROR" ] ; then exit 1;fi
 
